# ISS

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-sd.txt  requirements.txt  utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configs/: sd-tiny.yaml  sd15.yaml  sd2-udis-lowmem.yaml  sd2-udis.yaml  sd2.yaml  tiny.yaml
iss/: __init__.py  _version.py  cli.py  config.py  data.py  diffusion.py  metrics.py  model.py  trainer.py
script/: train_multi_gpu.sh
stitchdiff/: __init__.py  alignment.py  cli.py  config.py  metrics.py  model.py  trainer.py
tests/: test_alignment.py  test_data.py  test_diffusers_actual.py  test_model.py  test_trainer.py
