[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ISS"
dynamic = ["version"]
description = "ISS: geometry-guided conditional diffusion for two-image stitching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.8,<5",
  "Pillow>=12.3.0,<13",
  "PyYAML>=6,<7",
  "torch>=2.2,<2.7",
]

[project.optional-dependencies]
sd = [
  "accelerate>=0.30,<2",
  "diffusers>=0.39.0,<0.40",
  "huggingface-hub>=0.23,<2",
  "safetensors>=0.4,<1",
  "transformers>=5.14.1,<6",
]
dev = ["pytest>=9.1.1,<10"]

[project.scripts]
iss = "iss.cli:main"

[tool.setuptools.packages.find]
include = ["iss*"]

[tool.setuptools.dynamic]
version = {attr = "iss._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
